--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": " node scripts/start.js",
     "build": "rimraf build && node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -138,5 +138,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
